# android-breakpad

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/junmeng/breakpaddemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libnative.cpp
app/src/main/java/com/junmeng/breakpaddemo/: MainActivity.kt
app/src/main/java/com/junmeng/breakpaddemo/jni/: NativeCrashDemo.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/junmeng/breakpaddemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_breakpad/: build.gradle  publish.gradle
lib_breakpad/src/androidTest/java/com/junmeng/libbreakpad/: ExampleInstrumentedTest.kt
lib_breakpad/src/main/: AndroidManifest.xml
lib_breakpad/src/main/cpp/: CMakeLists.txt  libbreakpad.cpp
lib_breakpad/src/main/cpp/common/: ALog.cpp  ALog.h  GJvm.cpp  GJvm.h
lib_breakpad/src/main/java/com/junmeng/libbreakpad/: BreakpadCore.kt  BreakpadUtil.kt  NativeLib.kt
lib_breakpad/src/test/java/com/junmeng/libbreakpad/: ExampleUnitTest.kt
lib_stackwalk/: build.gradle
lib_stackwalk/src/androidTest/java/com/junmeng/stackwalk/: ExampleInstrumentedTest.kt
lib_stackwalk/src/main/: AndroidManifest.xml
lib_stackwalk/src/main/cpp/: CMakeLists.txt  stackwalk.cpp
lib_stackwalk/src/main/cpp/breakpad/src/processor/: microdump_stackwalk.cc  minidump_dump.cc
lib_stackwalk/src/main/java/com/junmeng/stackwalk/: NativeLib.kt
lib_stackwalk/src/test/java/com/junmeng/stackwalk/: ExampleUnitTest.kt
test/: test.dmp
